--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <artifactId>nxrm3</artifactId>
     <groupId>org.sonatype.plugins</groupId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4-cloudbees-1</version>
   </parent>
 
   <artifactId>nxrm3-maven-plugin</artifactId>
